# flask-workout

./: README.MD  crud.py  db.py  exercises.py  main.py  pyproject.toml  user.py
static/css/: styles.css
templates/: add_exercise.html  base.html  login.html  page401.html  page404.html  timer.html
templates/exercise/: add_exercise.html  exercises.html  update_exercise.html
templates/set/: add_set.html  create.html  start_new_set.html  start_set.html  update_set.html
templates/user/: add_user.html  create.html
templates/workout/: add_workout.html  show_workout.html  workout.html  workouts.html
templates/workout_type/: add_workout_type.html  update_workout_type.html
