[tool.poetry]
name = "flask-workout"
version = "0.1.0"
description = ""
authors = ["Earl <earlhikky91@gmail.com>"]
readme = "README.MD"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
sqlalchemy = "^2.0.23"
psycopg2 = "^2.9.9"
flask-sqlalchemy = "^3.1.1"
icecream = "^2.1.3"
flask-caching = "^2.1.0"
flask-login = "^0.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
